--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.format-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MYSQL5Dialect
 
+# security configuration 
+
+# spring.security.user.name=akshit
+# spring.security.user.password=akshit
