Added OAuth2 github feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,15 +20,13 @@ spring.jpa.hibernate.ddl-auto=update
 
 # oauth2 configuration - google
 
-spring.security.oauth2.client.registration.google.client-name=Google
 spring.security.oauth2.client.registration.google.client-id=277892702497-d41euukgr0mse2lpi4ngcr64p1fo2mj2.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
 
 # oauth2 configuration - github
-spring.security.oauth2.client.registration.github.client-name=Github
-spring.security.oauth2.client.registration.github.client-id=bgfhgh 
-spring.security.oauth2.client.registration.github.client-secret=fghgfha
+spring.security.oauth2.client.registration.github.client-id= Iv23liLkVSGzYIFpVJp0
+spring.security.oauth2.client.registration.github.client-secret=8ca7277a30c76c945dde241d069f431416c705ff
 spring.security.oauth2.client.registration.github.scope=email,profile
 
 # oauth2 configuration - facebook
