added contacts page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,11 @@ spring.security.oauth2.client.registration.github.client-secret=8ca7277a30c76c94
 spring.security.oauth2.client.registration.github.scope=email,profile
 
 # oauth2 configuration - facebook
+
+
+#cloudinary configuration
+
+cloudinary.cloud.name=dqnishapn
+cloudinary.api.key=543871788965848
+cloudinary.api.secret=wnf9i3f23QC6WvhlPygZqyLxqo4
+
